--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,54 +2,57 @@
 
 </div>
 
-<div class="row">
+<div class="container">
+	<div class="row">
 
-	<div class="card-deck">
-	  <div class="card">
-	    <div class="card-block">
-	      <h4 class="card-title">Card title</h4>
-	      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-	    </div>
-	  </div>
-	  <div class="card">
-	    <div class="card-block">
-	      <h4 class="card-title">Card title</h4>
-	      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-	    </div>
-	  </div>
-	  <div class="card">
-	    <div class="card-block">
-	      <h4 class="card-title">Card title</h4>
-	      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-	    </div>
-	  </div>
+		<div class="card-deck">
+		  <div class="card">
+		    <div class="card-block">
+		      <h4 class="card-title">Card title</h4>
+		      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+		    </div>
+		  </div>
+		  <div class="card">
+		    <div class="card-block">
+		      <h4 class="card-title">Card title</h4>
+		      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+		    </div>
+		  </div>
+		  <div class="card">
+		    <div class="card-block">
+		      <h4 class="card-title">Card title</h4>
+		      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+		    </div>
+		  </div>
+		</div>
+
 	</div>
 
-</div>
+	<br>
 
-<br>
+	<div class="row">
 
-<div class="row">
+		<div class="card-deck">
+		  <div class="card">
+		    <div class="card-block">
+		      <h4 class="card-title">Card title</h4>
+		      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+		    </div>
+		  </div>
+		  <div class="card">
+		    <div class="card-block">
+		      <h4 class="card-title">Card title</h4>
+		      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+		    </div>
+		  </div>
+		  <div class="card">
+		    <div class="card-block">
+		      <h4 class="card-title">Card title</h4>
+		      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+		    </div>
+		  </div>
+		</div>
 
-	<div class="card-deck">
-	  <div class="card">
-	    <div class="card-block">
-	      <h4 class="card-title">Card title</h4>
-	      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-	    </div>
-	  </div>
-	  <div class="card">
-	    <div class="card-block">
-	      <h4 class="card-title">Card title</h4>
-	      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-	    </div>
-	  </div>
-	  <div class="card">
-	    <div class="card-block">
-	      <h4 class="card-title">Card title</h4>
-	      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-	    </div>
-	  </div>
 	</div>
 
 </div>
