--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,7 @@
 		  </div>
 		  <div class="card">
 		    <div class="card-block">
-		      <h4 class="card-title">Card title</h4>
+		      <h4 class="card-title well">Card title</h4>
 		      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
 		    </div>
 		  </div>
