added Content on Index

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
 		<div class="card-deck">
 		  <div class="card">
 		    <div class="card-block">
-		      <h4 class="card-title well">Card title</h4>
+		      <h4 class="card-title well"><img src="http://systemout.net/images/Gravatar-icon.png" height="40px"> Card title</h4>
 		      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
 		    </div>
 		  </div>
@@ -20,7 +20,7 @@
 		  </div>
 		  <div class="card">
 		    <div class="card-block">
-		      <h4 class="card-title well">Card title</h4>
+		      <h4 class="card-title well"><img src="http://systemout.net/images/Gravatar-icon.png" height="40px"> Card title</h4>
 		      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
 		    </div>
 		  </div>
@@ -35,19 +35,19 @@
 		<div class="card-deck">
 		  <div class="card">
 		    <div class="card-block">
-		      <h4 class="card-title well">Card title</h4>
+		      <h4 class="card-title well"><img src="http://systemout.net/images/Gravatar-icon.png" height="40px"> Card title</h4>
 		      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
 		    </div>
 		  </div>
 		  <div class="card">
 		    <div class="card-block">
-		      <h4 class="card-title well">Card title</h4>
+		      <h4 class="card-title well"><img src="http://systemout.net/images/Gravatar-icon.png" height="40px"> Card title</h4>
 		      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
 		    </div>
 		  </div>
 		  <div class="card">
 		    <div class="card-block">
-		      <h4 class="card-title well">Card title</h4>
+		      <h4 class="card-title well"><img src="http://systemout.net/images/Gravatar-icon.png" height="40px"> Card title</h4>
 		      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
 		    </div>
 		  </div>
