--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,20 +8,20 @@
 		<div class="card-deck">
 		  <div class="card">
 		    <div class="card-block">
-		      <h4 class="card-title well"><img src="http://systemout.net/images/Gravatar-icon.png" height="40px"> Card title</h4>
-		      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+		      <h4 class="card-title well"><img src="http://systemout.net/images/Gravatar-icon.png" height="40px"> Poster Name</h4>
+		      <p class="card-text">This is where the post Content will be</p>
 		    </div>
 		  </div>
 		  <div class="card">
 		    <div class="card-block">
 		      <h4 class="card-title well"><img src="http://systemout.net/images/Gravatar-icon.png" height="40px"> Card title</h4>
-		      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+		      <p class="card-text">This is where the post Content will be</p>
 		    </div>
 		  </div>
 		  <div class="card">
 		    <div class="card-block">
 		      <h4 class="card-title well"><img src="http://systemout.net/images/Gravatar-icon.png" height="40px"> Card title</h4>
-		      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+		      <p class="card-text">This is where the post Content will be</p>
 		    </div>
 		  </div>
 		</div>
@@ -36,19 +36,19 @@
 		  <div class="card">
 		    <div class="card-block">
 		      <h4 class="card-title well"><img src="http://systemout.net/images/Gravatar-icon.png" height="40px"> Card title</h4>
-		      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+		      <p class="card-text">This is where the post Content will be</p>
 		    </div>
 		  </div>
 		  <div class="card">
 		    <div class="card-block">
 		      <h4 class="card-title well"><img src="http://systemout.net/images/Gravatar-icon.png" height="40px"> Card title</h4>
-		      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+		      <p class="card-text">This is where the post Content will be</p>
 		    </div>
 		  </div>
 		  <div class="card">
 		    <div class="card-block">
 		      <h4 class="card-title well"><img src="http://systemout.net/images/Gravatar-icon.png" height="40px"> Card title</h4>
-		      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+		      <p class="card-text">This is where the post Content will be</p>
 		    </div>
 		  </div>
 		</div>
