added Content on Index

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,13 +14,13 @@
 		  </div>
 		  <div class="card">
 		    <div class="card-block">
-		      <h4 class="card-title well"><img src="http://systemout.net/images/Gravatar-icon.png" height="40px"> Card title</h4>
+		      <h4 class="card-title well"><img src="http://systemout.net/images/Gravatar-icon.png" height="40px"> Poster Name</h4>
 		      <p class="card-text">This is where the post Content will be</p>
 		    </div>
 		  </div>
 		  <div class="card">
 		    <div class="card-block">
-		      <h4 class="card-title well"><img src="http://systemout.net/images/Gravatar-icon.png" height="40px"> Card title</h4>
+		      <h4 class="card-title well"><img src="http://systemout.net/images/Gravatar-icon.png" height="40px"> Poster Name</h4>
 		      <p class="card-text">This is where the post Content will be</p>
 		    </div>
 		  </div>
@@ -35,19 +35,19 @@
 		<div class="card-deck">
 		  <div class="card">
 		    <div class="card-block">
-		      <h4 class="card-title well"><img src="http://systemout.net/images/Gravatar-icon.png" height="40px"> Card title</h4>
+		      <h4 class="card-title well"><img src="http://systemout.net/images/Gravatar-icon.png" height="40px"> Poster Name</h4>
 		      <p class="card-text">This is where the post Content will be</p>
 		    </div>
 		  </div>
 		  <div class="card">
 		    <div class="card-block">
-		      <h4 class="card-title well"><img src="http://systemout.net/images/Gravatar-icon.png" height="40px"> Card title</h4>
+		      <h4 class="card-title well"><img src="http://systemout.net/images/Gravatar-icon.png" height="40px"> Poster Name</h4>
 		      <p class="card-text">This is where the post Content will be</p>
 		    </div>
 		  </div>
 		  <div class="card">
 		    <div class="card-block">
-		      <h4 class="card-title well"><img src="http://systemout.net/images/Gravatar-icon.png" height="40px"> Card title</h4>
+		      <h4 class="card-title well"><img src="http://systemout.net/images/Gravatar-icon.png" height="40px"> Poster Name</h4>
 		      <p class="card-text">This is where the post Content will be</p>
 		    </div>
 		  </div>
