--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,6 +1,6 @@
-.mynavbar-inverse{
+/*.mynavbar-inverse{
 	background-image: linear-gradient(to bottom,#ff1a1a 0,#222 100%);
-}
+}*/
 .mynavbar-brand, .navbar-nav > li > a {
     text-shadow: 0 1px 0 rgba(153, 255, 102, .25);
 }
