--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -24,27 +24,20 @@
             <ul class="sidebar-nav">
               
                 <li>
-                    <a href="#">Dashboard</a>
+                    <a href="#">User Name</a>
                 </li>
                 <li>
-                    <a href="#">Shortcuts</a>
+                    <a href="#">Your Fandoms</a>
                 </li>
                 <li>
-                    <a href="#">Overview</a>
+                    <a href="#">Your Friends</a>
                 </li>
                 <li>
-                    <a href="#">Events</a>
+                    <a href="#">Upcomming Events</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <a href="#">Services</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
+                    <a href="#">Find Fandoms</a>
                 </li>
             </ul>
         </div>
       </div>
-      
