--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,6 +4,7 @@
 
         <!-- /#sidebar-wrapper -->
         <div class="well">
+        	Test Content
         </div>
 <div class="container">
 	<div class="row">
