--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
      
 
         <!-- /#sidebar-wrapper -->
-        <div class="well">
+        <div class="well" id="notif">
         	Test Content
         </div>
 <div class="container">
