--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,10 @@
 
         <!-- /#sidebar-wrapper -->
         <div class="well" id="notif">
-        	Test Content
+        	<div class="alert alert-success" role="alert">
+			  <h4 class="alert-heading">Well done!</h4>
+			  You successfully read this important alert message.
+			</div>
         </div>
 <div class="container">
 	<div class="row">
