--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,12 +3,13 @@
      
 
         <!-- /#sidebar-wrapper -->
-        <div class="well" id="notif">
-        	<div class="alert alert-success" role="alert">
+        <!-- <div class="well" id="notif">
+        	
+        </div> -->
+        <div class="alert alert-success" role="alert">
 			  <h4 class="alert-heading">Well done!</h4>
 			  You successfully read this important alert message.
 			</div>
-        </div>
 <div class="container">
 	<div class="row">
 
