--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
         <!-- <div class="well" id="notif">
         	
         </div> -->
-        <div class="alert alert-success" role="alert">
+        <div class="alert alert-success" role="alert" id="notif">
 			  <h4 class="alert-heading">Well done!</h4>
 			  You successfully read this important alert message.
 			</div>
