--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,9 +6,9 @@
         <!-- <div class="well" id="notif">
         	
         </div> -->
-        <div class="alert alert-success" role="alert" id="notif">
-			  <h4 class="alert-heading">Well done!</h4>
-			  You successfully read this important alert message.
+        <div class="alert alert-warning" role="alert" id="notif">
+			  <h4 class="alert-heading">Under construction</h4>
+			  TheFandomNetwork is still underconstruction. 
 			</div>
 <div class="container">
 	<div class="row">
