--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -23,9 +23,10 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
               
-                <li>
-                    <a href="#">User Name</a>
-                </li>
+                <li class="sidebar-brand">
+                    <a href="#">
+                       User Name
+                    </a>
                 <li>
                     <a href="#">Your Fandoms</a>
                 </li>
