--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -25,7 +25,7 @@
               
                 <li class="sidebar-brand">
                     <a href="#">
-                       User Name
+                       Ezekiel Hammond (Jafesu)
                     </a>
                 <li>
                     <a href="#">Your Fandoms</a>
