--- a/app/views/home/_register.html.erb
+++ b/app/views/home/_register.html.erb
@@ -5,26 +5,23 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title">Register</h4>
       </div>
-      <%= form_for :answer, url: '/login', html: { class: 'form-horizontal' } do %>
+      
         <div class="modal-body">
-          <div class="form-group">
-            <label for="inputEmail" class="col-sm-2 control-label">Email</label>
-            <div class="col-sm-10">
-              <input type="email" name="email" class="form-control" id="inputEmail" placeholder="Email" required>
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="inputPassword" class="col-sm-2 control-label">Password</label>
-            <div class="col-sm-10">
-              <input type="Password" name="inputPassword" class="form-control" id="inputPassword" placeholder="Password" required>
-            </div>
-          </div>
+          <%= form_for(@user) do |f| %>
+            <%= f.text_field :first_name, :placeholder => "First name", class="form-control" %>
+            <%= f.text_field :last_name, :placeholder => "Last name", class="form-control" %>
+            <%= f.email_field :email, :placeholder => "Email", class="form-control" %>
+            <%= f.password_field :password, :placeholder => "Password", class="form-control" %>
+            <%= f.submit "Create an account", class: "btn-submit" %>
+          <% end %>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal" data-toggle="modal" ata-target="#Register">Register</button>
           <button type="submit" class="btn btn-primary">Login</button>
         </div>
-      <% end %>
     </div>
   </div>
 </div>
+
+
+
