--- a/app/views/home/_register.html.erb
+++ b/app/views/home/_register.html.erb
@@ -8,10 +8,10 @@
       
         <div class="modal-body">
           <%= form_for(@user) do |f| %>
-            <%= f.text_field :first_name, :placeholder => "First name", class="form-control" %>
-            <%= f.text_field :last_name, :placeholder => "Last name", class="form-control" %>
-            <%= f.email_field :email, :placeholder => "Email", class="form-control" %>
-            <%= f.password_field :password, :placeholder => "Password", class="form-control" %>
+            <%= f.text_field :first_name, :placeholder => "First name" %>
+            <%= f.text_field :last_name, :placeholder => "Last name" %>
+            <%= f.email_field :email, :placeholder => "Email" %>
+            <%= f.password_field :password, :placeholder => "Password" %>
             <%= f.submit "Create an account", class: "btn-submit" %>
           <% end %>
         </div>
