--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -14,7 +14,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><form><a href="#" class="pull-right btn btn-success navbar-btn btn-sm" data-toggle="modal" data-target="#login-modal" style= "margin-right: 10px">Login</a></form></li>
 
-        <li><form><a href="#" class="pull-right btn btn-success navbar-btn btn-sm" data-toggle="modal" data-target="#register-modal" >Register</a></form></li>
+        <li><form><a href="/signup" class="pull-right btn btn-success navbar-btn btn-sm"  >Register</a></form></li>
       </ul>
     </div>
   </div>
