--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
   <body>
   	<%= render 'home/navbar' %>
   	<%= render 'home/login' %>
-  	<%= render 'home/register' %>
+  	#<%= render 'home/register' %>
     <%= yield %>
   </body>
 </html>
