--- a/app/views/home/_register.html.erb
+++ b/app/views/home/_register.html.erb
@@ -5,7 +5,7 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title">Register</h4>
       </div>
-       <%= form_for(@user) do |f| %>
+       <%= form_for(@user || User.new ) do |f| %>
         <div class="modal-body">
           <div class="form-group">
             <label for="inputEmail" class="col-sm-2 control-label">Email</label>
