--- a/app/views/home/_register.html.erb
+++ b/app/views/home/_register.html.erb
@@ -8,18 +8,18 @@
        <%= form_for(@user || User.new ) do |f| %>
         <div class="modal-body">
           <div class="form-group">
-            <label for="inputEmail" class="col-sm-2 control-label">Email</label>
+            <label for="inputFirst" class="col-sm-2 control-label">First Name</label>
             <div class="col-sm-10">
               <%= f.text_field :first_name, :placeholder => "First name" %>
             </div>
           </div>
           <div class="form-group">
-            <label for="inputPassword" class="col-sm-2 control-label">Password</label>
+            <label for="inputLast" class="col-sm-2 control-label">Last Name</label>
             <div class="col-sm-10">
               <%= f.text_field :last_name, :placeholder => "Last name" %>            </div>
           </div>
           <div class="form-group">
-            <label for="inputPassword" class="col-sm-2 control-label">Password</label>
+            <label for="inputEmail" class="col-sm-2 control-label">Email</label>
             <div class="col-sm-10">
               <%= f.email_field :email, :placeholder => "Email" %>
             </div>
