--- a/app/views/home/_login.html.erb
+++ b/app/views/home/_login.html.erb
@@ -5,24 +5,24 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title">Login</h4>
       </div>
-      <%= form_for :answer, url: '/login', html: { class: 'form-horizontal' } do %>
+      <%= form_for(:session, url: login_path) do |f| %> 
         <div class="modal-body">
           <div class="form-group">
             <label for="inputEmail" class="col-sm-2 control-label">Email</label>
             <div class="col-sm-10">
-              <input type="email" name="email" class="form-control" id="inputEmail" placeholder="Email" required>
+              <%= f.email_field :email, :placeholder => "Email" %>
             </div>
           </div>
           <div class="form-group">
             <label for="inputPassword" class="col-sm-2 control-label">Password</label>
             <div class="col-sm-10">
-              <input type="Password" name="inputPassword" class="form-control" id="inputPassword" placeholder="Password" required>
+              <%= f.password_field :password, :placeholder => "Password" %>
             </div>
           </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal" data-toggle="modal" data-target="#register-modal">Register</button>
-          <button type="submit" class="btn btn-primary">Login</button>
+          <%= f.submit "Log in", class: "btn btn-primary btn-submit" %>
         </div>
       <% end %>
     </div>
