Completed Login, added Text area for posting

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
   	<%= render 'home/navbar' %>
   	<%= render 'home/login' %>
   	<%= render 'home/register' %>
+  	<%= render 'home/sidenav' %>
     <%= yield %>
   </body>
 </html>
