--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -11,34 +11,21 @@
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li><form><a href="#" class="pull-right btn btn-success navbar-btn btn-sm" data-toggle="modal" data-target="#login-modal" style= "margin-right: 10px">Login</a></form></li>
+     <% if current_user %>
+            <ul>
+              <li ><%= link_to "Log out", logout_path, method: "delete", class: "pull-right btn btn-success navbar-btn btn-sm"  %></li>
+          </ul>
+          <% else %> 
+          <ul class="nav navbar-nav navbar-right">
+            <li><form><a href="#" class="pull-right btn btn-success navbar-btn btn-sm" data-toggle="modal" data-target="#login-modal" style= "margin-right: 10px">Login</a></form></li>
 
-        <li><form><a href="#" class="pull-right btn btn-success navbar-btn btn-sm" data-toggle="modal" data-target="#register-modal" >Register</a></form></li>
-      </ul>
+            <li><form><a href="#" class="pull-right btn btn-success navbar-btn btn-sm" data-toggle="modal" data-target="#register-modal" >Register</a></form></li>
+          </ul>
+        <% end %>
     </div>
   </div>
 </nav>
-<div id="wrapper">
-        <div id="sidebar-wrapper">
-            <ul class="sidebar-nav">
-              
-                <li class="sidebar-brand">
-                    <a href="#">
-                       Ezekiel Hammond (Jafesu)
-                    </a>
-                <li>
-                    <a href="#">Your Fandoms</a>
-                </li>
-                <li>
-                    <a href="#">Your Friends</a>
-                </li>
-                <li>
-                    <a href="#">Upcomming Events</a>
-                </li>
-                <li>
-                    <a href="#">Find Fandoms</a>
-                </li>
-            </ul>
-        </div>
-      </div>
+
+
+
+<!--   -->
