--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,16 +1,20 @@
-
-
-     
-
-        <!-- /#sidebar-wrapper -->
-        <!-- <div class="well" id="notif">
-        	
-        </div> -->
-        <div class="alert alert-warning" role="alert" id="notif">
+<div class="alert alert-warning" role="alert" id="notif">
 			  <h4 class="alert-heading">Under construction</h4>
 			  TheFandomNetwork is still underconstruction. 
 			</div>
 <div class="container">
+
+
+	<% if current_user %>
+	    <a href="#">
+	       <div class="well" id="post">
+	        <textarea class="form-control" rows="5" id="comment"></textarea> 
+	        <button type="button" class="btn btn-primary">Primary</button>
+
+	       </div>
+	    </a>
+	<% else %>
+    <% end %>
 	<div class="row">
 
 		<div class="card-deck">
