fixed text area

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,13 +6,10 @@
 
 
 	<% if current_user %>
-	    <a href="#">
 	       <div class="well" id="post">
 	        <textarea class="form-control" rows="5" id="comment"></textarea> 
-	        <button type="button" class="btn btn-primary">Primary</button>
-
-	       </div>
-	    </a>
+	        <button type="button" class="btn btn-primary">Post </button>
+	       </div
 	<% else %>
     <% end %>
 	<div class="row">
