--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar mynavbar-inverse">
+<nav class="navbar mynavbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="#"><img src="/images/TheFandomNetwork.png" alt="TheFandomNetwork" height="60px"></a>
+      <a href="/"><img src="/images/TheFandomNetwork.png" alt="TheFandomNetwork" height="60px"></a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
