--- a/app/views/home/_sidenav.html.erb
+++ b/app/views/home/_sidenav.html.erb
@@ -1,7 +1,8 @@
 <div id="wrapper">
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
-              
+              <li class="sidebar-brand">
+              </li>
                 <li class="sidebar-brand">
                 <% if current_user %>
                     <a href="#">
