Started proccess of commenting

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,11 @@
 
   <body>
   	<%= render 'home/navbar' %>
+    <%= render 'home/border' %>
+    <%= render 'home/sidenav' %>
   	<%= render 'home/login' %>
   	<%= render 'home/register' %>
-  	<%= render 'home/sidenav' %>
+  	
     <%= yield %>
   </body>
 </html>
