--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
+
 <div class="alert alert-warning" role="alert" id="notif">
 			  <h4 class="alert-heading">Under construction</h4>
 			  TheFandomNetwork is still underconstruction. 
@@ -8,7 +9,7 @@
 	<% if current_user %>
 		<%= form_for :post, url: '/posts', html: { class: 'form-horizontal' } do %>
 	       <div class="well" id="post">
-	        <textarea class="form-control" name="post[post]" rows="5" id="comment"></textarea> 
+	        <textarea class="form-control" name="post[post]" rows="5" id="comment" placeholder="Hello <%= current_user.first_name %> what would you like to say?"></textarea> 
 	        <input type="hidden" name="post[email]" value="<%= current_user.email %>"/>
 	        <input type="hidden" name="post[first_name]" value="<%= current_user.first_name %>" />
 	        <input type="hidden" name="post[last_name]" value="<%= current_user.last_name %>" />
@@ -29,13 +30,18 @@
 		      <h4 class="card-title well"><img src="<%= q.gravatar %>" height="40px"> <%= q.first_name %> <%= q.last_name %></h4>
 		      <p class="card-text"><%= q.post %></p>
 		      <p class="card-text date">Posted <%= time_ago_in_words q.created_at %> ago</p>
+
+		      <% if User.count > 0 %>
+		      <p class="card-text date"><a href="<%= post_path(q) %>"><%= User.count %> Comments</a></p>
+		      <% else %> 
+		      <% end %>
 		    </div>
 		  </div>
 		  <div class="card">
 		    <div class="card-block">
 		      <h4 class="card-title well"><img src="<%= q.gravatar %>" height="40px"> <%= q.first_name %> <%= q.last_name %></h4>
 		      <p class="card-text"><%= q.post %></p>
-		      <p class="card-text date">Posted <%= time_ago_in_words q.created_at %> ago</p>
+		      <p class="card-text date">Posted <%= time_ago_in_words q.created_at %> ago</br> <button type="button" class="btn btn-xs btn-primary">View Comments</button></p>
 		    </div>
 		  </div>
 	</div>
