Testing for comments

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -45,7 +45,7 @@
           <input type="hidden" name="comment[email]" value="<%= current_user.email %>"/>
           <input type="hidden" name="comment[first_name]" value="<%= current_user.first_name %>" />
           <input type="hidden" name="comment[last_name]" value="<%= current_user.last_name %>" />
-          <input type="hidden" name="comment[post_id]" value="<%= @post.id %>" />
+          <!-- <input type="hidden" name="comment[post_id]" value="<%= @post.id %>" /> -->
           <button type="submit" class="btn btn-primary">Post </button>
         <% end %> 
          </div>
