--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,7 +27,7 @@
 		<div class="card-deck">
 		  <div class="card">
 		    <div class="card-block">
-		      <h4 class="card-title well"><img src="<%= q.gravatar %>" height="40px"> <%= q.first_name %> <%= q.last_name %></h4>
+		      <h4 class="card-title well"><img src="<%= q.gravatar %>" height="40px"><a href="/users/show/<%= q.id %>" ><%= q.first_name %> <%= q.last_name %></a></h4>
 		      <p class="card-text"><%= q.post %></p>
 		      <p class="card-text date">Posted <%= time_ago_in_words q.created_at %> ago</p>
 
