--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,6 @@
-<div align="center"><%= gravatar_for @user, size: 150 %></div>
+<div align="center">
+<%= gravatar_for @user, size: 150 %>
+	
+<h1><%= @user.first_name %> <%= @user.last_name %></h1>
+
+</div>
