--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
+<%= if current_user.id == @user.id %>
+<a href="/users/<%= @user.id %>/edit"></a>
+
 <div align="center">
 <%= gravatar_for @user, size: 150 %>
 	
