building User Profile

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
 <%= if current_user.id == @user.id %>
 <a href="/users/<%= @user.id %>/edit"></a>
-
+<% else %>
+<% end %>
 <div align="center">
 <%= gravatar_for @user, size: 150 %>
 	
