--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<%= if current_user.id == @user.id %>
+<% if current_user.id == @user.id %>
 <a href="/users/<%= @user.id %>/edit"></a>
 <% else %>
 <% end %>
