building User Profile

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,8 @@
 <% if current_user.id == @user.id %>
+
 <a href="/users/<%= @user.id %>/edit"></a>
 <% else %>
+<h1>NOPE!</h1>
 <% end %>
 <div align="center">
 <%= gravatar_for @user, size: 150 %>
