--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,14 @@
+
+<div align="center">
+<%= gravatar_for @user, size: 150 %>
+	
+<h1><%= @user.first_name %> <%= @user.last_name %></h1>
 <% if current_user.id == @user.id %>
 
 <a href="/users/<%= @user.id %>/edit"></a>
 <% else %>
 <h1>NOPE!</h1>
 <% end %>
-<div align="center">
-<%= gravatar_for @user, size: 150 %>
-	
-<h1><%= @user.first_name %> <%= @user.last_name %></h1>
+<%= current_user.id %> <%= @user.id %>
 
 </div>
