--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,10 +5,8 @@
 <h1><%= @user.first_name %> <%= @user.last_name %></h1>
 <% if current_user.id == @user.id %>
 
-<a href="/users/<%= @user.id %>/edit"></a>
+<a href="/users/<%= @user.id %>/edit">Edit Profile</a>
 <% else %>
 <h1>NOPE!</h1>
 <% end %>
-<%= current_user.id %> <%= @user.id %>
-
 </div>
