allowing images on post

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,6 +13,8 @@
       <div class="media-body">
         <h4 class="media-heading"><%= @post.first_name %> <%= @post.last_name %></h4>
         <%= @post.post %>
+
+        <%= image_tag @post.image.url(:medium) %>
       </div>
     </div>
   </div>
