--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,18 @@
 
 <div align="center">
+
 <%= gravatar_for @user, size: 150 %>
-	
-<h1><%= @user.first_name %> <%= @user.last_name %></h1>
+
 <% if current_user.id == @user.id %>
 
-<a href="/users/<%= @user.id %>/edit">Edit Profile<span class="glyphicon glyphicon-pencil
+<a href="/users/<%= @user.id %>/edit"><h1><%= @user.first_name %> <%= @user.last_name %></h1>
+<span class="glyphicon glyphicon-pencil
 "></span></a>
+
 <% else %>
-<h1>NOPE!</h1>
+
+<h1><%= @user.first_name %> <%= @user.last_name %></h1>
+
 <% end %>
+
 </div>
