--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,6 @@
 	        <input type="hidden" name="post[first_name]" value="<%= current_user.first_name %>" />
 	        <input type="hidden" name="post[last_name]" value="<%= current_user.last_name %>" />
 	        <input type="hidden" name="post[user_id]" value="<%= current_user.id %>"/>
-	        <input type="hidden" name="post[avatar]" value="<%= current_user.avatar.url(:thumb) %>">
 	        <%= f.file_field :image %>
 	        <button type="submit" class="btn btn-primary">Post </button>
 	       </div>
@@ -27,7 +26,7 @@
     <div class="card-deck">
 		  <div class="card">
 		    <div class="card-block">
-		      <h4 class="card-title well"><img src="<%= q.avatar %>" height="40px"><a href="/users/show/<%= q.user_id %>" ><%= q.first_name %> <%= q.last_name %></a></h4>
+		      <h4 class="card-title well"><%= image_tag @thisuser(q.email).avatar.url(:thumb) %> <a href="/users/show/<%= q.user_id %>" ><%= q.first_name %> <%= q.last_name %></a></h4>
 		      <p class="card-text"><%= q.post %></p>
 		     <% if q.image.file? %>
 		      <p class="card-text"><%= image_tag q.image.url(:medium) %></p>
