--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,18 +1,15 @@
 
-<div align="center">
 
-<%= gravatar_for @user, size: 150 %>
-
+<div align="center" class="jumbotron">
+<div align="center"><img class="img-circle" src="<%= @user.avatar.url(:large) %>" height="150px" width="150px"/></div>
+<h1 class="display-3"><%= @user.first_name %> <%= @user.last_name %></h1>
 <% if current_user.id == @user.id %>
-
-<a href="/users/<%= @user.id %>/edit"><h1><%= @user.first_name %> <%= @user.last_name %>
-<span class="glyphicon glyphicon-pencil
-"></span></h1></a>
-
+<a href="/users/<%= @user.id %>/edit">Edit your Profile<i class="glyphicon glyphicon-pencil"></i></a>
 <% else %>
-
-<h1><%= @user.first_name %> <%= @user.last_name %></h1>
-
 <% end %>
-
+<hr class="my-2">
+	<h2 class="lead" style="font-weight: bold;">About Me:</h2>
+  <p class="lead"><%= @user.bio %></p>
+  
+  
 </div>
